--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="index.css" />
+    <title>SearchBar</title>
 </head>
 <body>
-    <input type="SearchBar" />
+    <div class="outerContainer">
+    <h1 class="SearchBackground">Search Bar</h1>
+    <a href="#">Home</a>
+    <a href="#">About</a>
+    <a href="#">Contact Us</a>
+    <input type="text" placeholder="Search here.." />
+</div>
+    <script src="index.js"></script>
 </body>
 </html>
