--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 </head>
 <body>
     <div class="outerContainer">
+    <p id="demo"></p>
     <h1 class="SearchBackground">Search Bar</h1>
     <a href="#">Home</a>
     <a href="#">About</a>
     <a href="#">Contact Us</a>
-    <input type="text" placeholder="Search here.." />
-</div>
+    <input type="text" id="search" placeholder="Search here.." />
+    <button type="submit" onClick="search()">Submit</button>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
